syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "helloworld";
option java_outer_classname = "HelloWorldProto";

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc sayHello(HelloRequest) returns (HelloReply);
}